--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "sass": "^1.50.0"
+    "sass": "^1.50.0",
+    "swiper": "^8.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
