--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "cosmic-vegano",
+  "homepage": "https://cosmicvegano.github.io/cosmic-vegano",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -27,6 +30,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.6.2",
     "vite": "^2.9.0"
   }
